--- a/files/css/styles.css
+++ b/files/css/styles.css
@@ -8,9 +8,79 @@ p {
     font-family: "Comic Sans MS";
 }
 
+/*colorhunt*/
+
 .class1 {
     background-color: #601e40;
-<!-- colorhunt --> font-size: 30px;
+    font-size: 30px;
     font-family: "Arial Black";
     color: #A78295;
+}
+
+/*#signup{*/
+/*    background-color: brown;*/
+/*}*/
+
+.btn1{
+    background-color: #DFA878;
+    font-size: 25px;
+}
+
+/*.btnFont{*/
+/*    font-family: "Droid Sans";*/
+/*}*/
+
+.btn1:hover{
+    background-color: #814b1c;
+    font-size: 25px;
+}
+
+/*getcssscan*/
+
+
+                                                       /* CSS */
+                                                   .button-18 {
+                                                       align-items: center;
+                                                       background-color: #0A66C2;
+                                                       border: 0;
+                                                       border-radius: 100px;
+                                                       box-sizing: border-box;
+                                                       color: #ffffff;
+                                                       cursor: pointer;
+                                                       display: inline-flex;
+                                                       font-family: -apple-system, system-ui, system-ui, "Segoe UI", Roboto, "Helvetica Neue", "Fira Sans", Ubuntu, Oxygen, "Oxygen Sans", Cantarell, "Droid Sans", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Lucida Grande", Helvetica, Arial, sans-serif;
+                                                       font-size: 16px;
+                                                       font-weight: 600;
+                                                       justify-content: center;
+                                                       line-height: 20px;
+                                                       max-width: 480px;
+                                                       min-height: 40px;
+                                                       min-width: 0px;
+                                                       overflow: hidden;
+                                                       padding: 0px;
+                                                       padding-left: 20px;
+                                                       padding-right: 20px;
+                                                       text-align: center;
+                                                       touch-action: manipulation;
+                                                       transition: background-color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, box-shadow 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s;
+                                                       user-select: none;
+                                                       -webkit-user-select: none;
+                                                       vertical-align: middle;
+                                                   }
+
+.button-18:hover,
+.button-18:focus {
+    background-color: #16437E;
+    color: #ffffff;
+}
+
+.button-18:active {
+    background: #09223b;
+    color: rgb(255, 255, 255, .7);
+}
+
+.button-18:disabled {
+    cursor: not-allowed;
+    background: rgba(0, 0, 0, .08);
+    color: rgba(0, 0, 0, .3);
 }
